// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CountryFlag Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Country flag displays one flag of selected country. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <img
                alt="Anywhere"
                className="CountryFlag__StyledCountryFlag-h98fwe-0 gMcwUa"
                src="//images.kiwi.com/flags/24x0/flag-anywhere.jpg"
                srcSet="//images.kiwi.com/flags/48x0/flag-anywhere.jpg 2x"
                title="Anywhere"
              />
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        CountryFlag
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            code
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                anywhere
                              </span>
                              "
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountryFlag Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Country flag displays one flag of selected country. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <img
                alt="Country"
                className="CountryFlag__StyledCountryFlag-h98fwe-0 gMcwUa"
                data-test="test"
                src="//images.kiwi.com/flags/24x0/flag-anywhere.jpg"
                srcSet="//images.kiwi.com/flags/48x0/flag-anywhere.jpg 2x"
                title="Country"
              />
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        CountryFlag
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            code
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                anywhere
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            name
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Country
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
